# pi-rs

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONSTRUCTION_INVENTORY.md  Cargo.toml  DESIGN.md  DOGFOOD_SUITE.md  EXTENSION_INVENTORY.md  EXTERNAL_EXTENSION_INVENTORY.md  FINAL_PARITY_AUDIT.md  LUA_SURFACE.md  PLAN.md  README.md  flake.nix
crates/pi-rs-agent/: Cargo.toml
crates/pi-rs-agent/lua/: agent.lua
crates/pi-rs-agent/src/: lib.rs
crates/pi-rs-agent/tests/: agent_parity.rs  lifecycle.rs  loop_policy.rs  state.rs  streamed_turn.rs  tool_roundtrip.rs
crates/pi-rs-ai/: Cargo.toml
crates/pi-rs-ai-auth/: Cargo.toml
crates/pi-rs-ai-auth/src/: anthropic.rs  callback_server.rs  device_code.rs  engine.rs  error.rs  github_copilot.rs  lib.rs  oauth_page.rs  openai_codex.rs  pkce.rs  registry.rs  types.rs
crates/pi-rs-ai-auth/tests/: callback_server.rs  engine.rs  pkce.rs  registry.rs  subscription_providers.rs
crates/pi-rs-ai/data/: models.json  models.provenance.json
crates/pi-rs-ai/src/: lib.rs
crates/pi-rs-ai/src/protocols/: anthropic.rs  azure_openai_responses.rs  bedrock.rs  cloudflare.rs  copilot_headers.rs  google.rs  google_shared.rs  google_vertex.rs  mistral.rs  mod.rs  openai_codex_responses.rs  openai_completions.rs  openai_prompt_cache.rs  openai_responses.rs  options.rs  simple_options.rs  transform_messages.rs
crates/pi-rs-ai/src/registry/: api_registry.rs  catalog.rs  env_api_keys.rs  mod.rs  stream.rs
crates/pi-rs-ai/src/transport/: abort.rs  event_stream.rs  http.rs  mod.rs  retry.rs  sse.rs
crates/pi-rs-ai/src/util/: headers.rs  json_parse.rs  mod.rs  sanitize.rs
crates/pi-rs-ai/tests/: anthropic_parity.rs  azure_openai_responses_parity.rs  bedrock_converse_stream_parity.rs  event_stream.rs  google_generative_ai_parity.rs  google_vertex_parity.rs  http.rs  json_parse.rs  mistral_conversations_parity.rs  openai_codex_responses_parity.rs  openai_codex_websocket_parity.rs  openai_completions.rs  openai_completions_parity.rs  openai_responses_parity.rs  registry.rs  retry.rs  sse.rs  transform_messages.rs
crates/pi-rs-ai/tests/fixtures/anthropic/: README.md  replay_basic.sse
crates/pi-rs-ai/tests/fixtures/openai-completions/: README.md  params_apikey.request.json  replay_basic.events.json  replay_basic.message.json  replay_basic.sse
crates/pi-rs-app/: Cargo.toml
crates/pi-rs-app/src/: config.rs  launcher.rs  lib.rs  main.rs
crates/pi-rs-app/src/builtins/: coding-agent.lua  interactive.lua  manifest.rs  mod.rs
crates/pi-rs-app/src/builtins/interactive/: PARITY.md  changelog.md
crates/pi-rs-app/src/builtins/interactive/assets/: clankolas.base64  daxnuts.hex
crates/pi-rs-app/src/builtins/tools/: bash.lua  diff.lua  edit-diff.lua  edit.lua  file-mutation-queue.lua  find.lua  grep.lua  keybinding-hints.lua  ls.lua  mime.lua  output-accumulator.lua  path-utils.lua  prelude.lua  read.lua  render-utils.lua  shell.lua  truncate.lua  visual-truncate.lua  write.lua
crates/pi-rs-app/src/builtins/utils/: agent-session.lua  bash-executor.lua  branch-summary.lua  compaction.lua  export-html.lua  extensions.lua  messages.lua  syntax-highlight.lua  system-prompt.lua
crates/pi-rs-app/src/cli/: args.rs  extensions.rs  list_models.rs  login.rs  mod.rs  session_select.rs
crates/pi-rs-app/src/core/: auth_guidance.rs  defaults.rs  http_dispatcher.rs  mod.rs  model_resolver.rs
crates/pi-rs-app/tests/: agent_tool_roundtrip.rs  ai_auth_catalog.rs  anthropic_replay.rs  assembly.rs  block_images_replay.rs  compaction_parity.rs  experience_contract.rs  export_html_parity.rs  extension_loading.rs  interactive_bash.rs  interactive_compaction.rs  interactive_login.rs  interactive_model.rs  interactive_reload.rs  interactive_retry.rs  interactive_scoped_models.rs  interactive_session.rs  interactive_startup.rs  interactive_thinking.rs  interactive_tree.rs  interactive_trust.rs  launcher.rs  launcher_surface.rs  performance_contract.rs  resume_replay.rs  retry_parity.rs  session_parity.rs  source_audit.rs  startup_network.rs  system_prompt_parity.rs  tool_parity.rs  tools.rs
crates/pi-rs-host/: Cargo.toml
crates/pi-rs-host/data/: hljs-grammars.json
crates/pi-rs-host/src/: ai.rs  api.rs  auth.rs  auth_storage.rs  bindings.rs  clipboard.rs  config.rs  convert.rs  discover.rs  error.rs  exec.rs  http.rs  image.rs  jsdiff.rs  kernel.rs  kernel_api.rs  lib.rs  model_registry.rs  module_api.rs  os.rs  package.rs  paths.rs  resolve_config_value.rs  runtime_api.rs  runtime_registry.rs  schema.rs  session.rs  settings.rs  settings_manager.rs  trust.rs  vm.rs
crates/pi-rs-host/src/compatibility/: mod.rs  resolve.rs
crates/pi-rs-host/src/hljs/: grammar.rs  mod.rs  parse.rs
crates/pi-rs-host/src/tui_api/: components.rs  editor.rs  mod.rs  runtime.rs
crates/pi-rs-host/tests/: acceptance.rs  agent_mechanisms.rs  auth_bindings.rs  clipboard_bindings.rs  config_pipeline.rs  discovery_trust.rs  embedded.rs  hljs_parity.rs  http_bindings.rs  image_parity.rs  jsdiff_parity.rs  json_boundary.rs  kernel_publication.rs  kernel_transaction.rs  model_registry_bindings.rs  os_bindings.rs  parallel.rs  providers.rs  public_surface.rs  registries.rs  seam.rs  session_bindings.rs  settings_bindings.rs  trust_bindings.rs  tui_autocomplete.rs  tui_fuzzy.rs  tui_layout_components.rs  tui_loaders_images.rs  tui_markdown.rs  tui_multiline_editor.rs  tui_terminal.rs
crates/pi-rs-session/: Cargo.toml
crates/pi-rs-session/src/: lib.rs  messages.rs  paths.rs  session_manager.rs  time.rs  uuid.rs
crates/pi-rs-session/tests/: build_context.rs  custom_session_id.rs  file_operations.rs  labels.rs  migration.rs  save_entry.rs  tree_traversal.rs
crates/pi-rs-session/tests/common/: mod.rs
crates/pi-rs-tui/: Cargo.toml
crates/pi-rs-tui/src/: autocomplete.rs  box_component.rs  component.rs  editor.rs  fuzzy.rs  input.rs  kill_ring.rs  lib.rs  loader.rs  markdown.rs  process.rs  select_list.rs  settings_list.rs  spacer.rs  stdin_buffer.rs  terminal.rs  terminal_image.rs  truncated_text.rs  tui.rs  ui_harness.rs  undo_stack.rs  utils.rs
demo/: pi-rs.tape
(+407 files in other folders)
