[package]
name = "pi-rs-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "packages/agent port: Lua-authored agent policy pack"

[dependencies]
pi-rs-ai-types.workspace = true
pi-rs-host.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
