[package]
name = "pi-rs-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "packages/ai port: transport (HTTP/SSE/retry/cancellation), protocols, registry"

[dependencies]
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
httpdate.workspace = true
pi-rs-ai-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
