[package]
name = "pi-rs-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
pi-rs-ai = { workspace = true }
pi-rs-ai-auth = { workspace = true }
pi-rs-ai-types = { workspace = true }
pi-rs-host = { workspace = true }
pi-rs-agent = { workspace = true }
pi-rs-session = { workspace = true }
pi-rs-tui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
tokio = { workspace = true }
