[package]
name = "pi-rs-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
pi-rs-host = { workspace = true }
pi-rs-tui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pi-rs-ai = { workspace = true }
pi-rs-ai-auth = { workspace = true }
tempfile = "3"
